Added Bucket Fill + Fixed eraser point augmentation + refactoring

--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>groupId</groupId>
-    <artifactId>com.georgioyammine</artifactId>
-    <version>11.0.0</version>
+    <groupId>io.github.georgioyammine</groupId>
+    <artifactId>PaintFX</artifactId>
+    <version>11.0.1</version>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
@@ -22,6 +22,11 @@
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-fxml</artifactId>
+            <version>16</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-graphics</artifactId>
             <version>16</version>
         </dependency>
         <dependency>
